<resources>
    <string name="app_name">TVMaze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browse">Browse TV</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="action">Action</string>
    <string name="person_of_interest">Person of Interest</string>
    <string name="english">English</string>
    <string name="ended">Ended</string>
    <string name="default_error_message">Something went wrong! Please try again</string>
    <string name="favorite">Favorite</string>
    <string name="added_favorite">Added as Favorite</string>
    <string name="bookmark_added">bookmark added</string>
    <string name="menu_bookmark_icon">menu bookmark icon</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_sub_label">See all of your saved bookmarks, See all of your saved bookmarks, See all of your saved bookmarks, See all of your saved bookmarks</string>
</resources>