<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:padding="@dimen/_4sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/rv_item_shows_poster"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_4sdp"
            android:background="@android:color/white"
            android:src="@drawable/ic_local_movies_green_600_24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:adjustViewBounds="true"/>

        <ProgressBar
            android:id="@+id/item_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/rv_item_shows_poster"
            app:layout_constraintStart_toStartOf="@+id/rv_item_shows_poster"
            app:layout_constraintEnd_toEndOf="@id/rv_item_shows_poster"
            app:layout_constraintBottom_toBottomOf="@id/rv_item_shows_poster"/>

        <TextView
            android:id="@+id/rv_item_shows_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_web_semibold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/person_of_interest"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_4sdp"
            android:paddingEnd="@dimen/_4sdp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@+id/rv_item_forward_to_details"
            app:layout_constraintStart_toEndOf="@+id/rv_item_shows_poster"
            app:layout_constraintTop_toTopOf="@+id/rv_item_shows_poster" />

        <TextView
            android:id="@+id/rv_item_shows_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:fontFamily="@font/titillium_web_light"
            android:textSize="@dimen/_9sdp"
            android:paddingStart="@dimen/_4sdp"
            android:paddingEnd="0dp"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/_2sdp"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintStart_toEndOf="@+id/rv_item_shows_poster"
            app:layout_constraintTop_toBottomOf="@+id/rv_item_shows_name"
            app:drawableStartCompat="@drawable/ic_language_indigo_600_18dp" />

        <RatingBar
            android:id="@+id/rv_item_shows_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:numStars="5"
            android:stepSize=".1"
            android:isIndicator="true"
            app:layout_constraintStart_toEndOf="@+id/rv_item_shows_poster"
            app:layout_constraintTop_toBottomOf="@+id/rv_item_shows_lang"/>

        <TextView
            android:id="@+id/rv_item_shows_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4sdp"
            android:text="@string/action"
            android:fontFamily="@font/poppins_light"
            android:textSize="@dimen/_10sdp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="@+id/rv_item_shows_name"
            app:layout_constraintStart_toEndOf="@+id/rv_item_shows_poster"
            app:layout_constraintTop_toBottomOf="@+id/rv_item_shows_rating"/>

        <ImageView
            android:id="@+id/rv_item_forward_to_details"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:padding="@dimen/_14sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/rv_item_shows_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ended"
            android:fontFamily="@font/poppins_light"
            android:textSize="@dimen/_10sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingStart="@dimen/_4sdp"
            android:paddingEnd="0dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toEndOf="@+id/rv_item_shows_poster"
            app:layout_constraintTop_toBottomOf="@+id/rv_item_shows_genres"/>

        <ImageView
            android:id="@+id/rv_item_favorite_status"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:fontFamily="@font/poppins_light"
            android:textSize="@dimen/_10sdp"
            android:src="@drawable/bookmark_added_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/rv_item_shows_poster"
            app:layout_constraintEnd_toEndOf="@+id/rv_item_shows_poster"
            android:contentDescription="@string/bookmark_added" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>